--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ ark-bls12-381 = { version = "0.4.0",features = [ "curve" ], default-features = f
 ark-std = { version = "0.4.0", default-features = false }
 num-bigint = { version = "0.4", default-features = false }
 fastcrypto-zkp = { git = "https://github.com/MystenLabs/fastcrypto" }
+blst = { version = "0.3.10" }
 
 [dev-dependencies]
 csv = ">= 1.0, < 1.2" # csv 1.2 has MSRV 1.60
