--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ pairing = { version = "0.23", optional = true }
 rand_core = { version = "0.6", default-features = false }
 subtle = { version = "2.2.1", default-features = false }
 zeroize = { version = "1.4", default-features = false, optional = true }
-sp-crypto-ec-utils = { git = "https://github.com/paritytech/substrate.git", branch = "achimcc/arkworks-integration", version = "0.4.0", default-features = false, features = ["ec-utils-experimental"] }
+sp-crypto-ec-utils = { git = "https://github.com/paritytech/substrate.git", branch = "achimcc/arkworks-integration", version = "0.4.0", default-features = false }
 ark-scale = { version = "0.0.3", features = ["hazmat"], default-features = false }
 ark-serialize = { version = "0.4.2", default-features = false }
 ark-ff = { version = "0.4.2", default-features = false }
